tests/fixtures/valid_programs/switch_cases.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // Switch with integers
    const value: int = 2;
    
    switch (value) {
        case 1:
            IO::println("Value is 1");
            break;
        case 2:
            IO::println("Value is 2");
            break;
        case 3:
            IO::println("Value is 3");
            break;
        default:
            IO::println("Value is other");
            break;
    }
    
    // Switch with strings
    const greeting: string = "hello";
    
    switch (greeting) {
        case "hi":
            IO::println("Greeting: hi");
            break;
        case "hello":
            IO::println("Greeting: hello");
            break;
        case "bye":
            IO::println("Greeting: bye");
            break;
        default:
            IO::println("Unknown greeting");
            break;
    }
    
    // Switch with characters
    const letter: char = 'A';
    
    switch (letter) {
        case 'A':
            IO::println("Letter A");
            break;
        case 'B':
            IO::println("Letter B");
            break;
        default:
            IO::println("Other letter");
            break;
    }
    
    return 0;
}