tests/fixtures/invalid_programs/type_mismatch.cryo
namespace Main;

// Type error: assigning string to int
function main() -> int {
    const x: int = "hello";
    return 0;
}